parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement_list statement
Rule 3     statement_list -> statement
Rule 4     statement -> assignment_or_declaration
Rule 5     statement -> conditional_statement
Rule 6     statement -> repetition_statement
Rule 7     statement -> print_statement
Rule 8     statement -> read_statement
Rule 9     optional_type -> TYPE_INT
Rule 10    optional_type -> TYPE_FLOAT
Rule 11    optional_type -> TYPE_STRING
Rule 12    optional_type -> TYPE_CHAR
Rule 13    optional_type -> TYPE_BOOL
Rule 14    optional_type -> empty
Rule 15    assignment_or_declaration -> optional_type IDENTIFIER ASSIGN expression SEMICOLON
Rule 16    conditional_statement -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_list else_optional
Rule 17    elif_list -> elif_list ELIF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 18    elif_list -> empty
Rule 19    else_optional -> ELSE LBRACE statement_list RBRACE
Rule 20    else_optional -> empty
Rule 21    repetition_statement -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 22    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 23    read_statement -> READ LPAREN identifier_list RPAREN SEMICOLON
Rule 24    identifier_list -> identifier_list COMMA IDENTIFIER
Rule 25    identifier_list -> IDENTIFIER
Rule 26    expression -> expression PLUS expression
Rule 27    expression -> expression MINUS expression
Rule 28    expression -> expression TIMES expression
Rule 29    expression -> expression DIVIDE expression
Rule 30    expression -> expression POWER expression
Rule 31    expression -> expression EQ expression
Rule 32    expression -> expression NE expression
Rule 33    expression -> expression LT expression
Rule 34    expression -> expression LE expression
Rule 35    expression -> expression GT expression
Rule 36    expression -> expression GE expression
Rule 37    expression -> expression AND expression
Rule 38    expression -> expression OR expression
Rule 39    expression -> NOT expression
Rule 40    expression -> MINUS expression
Rule 41    expression -> LPAREN expression RPAREN
Rule 42    expression -> INTEGER
Rule 43    expression -> FLOAT_NUM
Rule 44    expression -> STRING_LITERAL
Rule 45    expression -> IDENTIFIER
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    empty -> <empty>

Terminals, with rules where they appear

AND                  : 37
ASSIGN               : 15
COMMA                : 24
DIVIDE               : 29
ELIF                 : 17
ELSE                 : 19
EQ                   : 31
FALSE                : 47
FLOAT_NUM            : 43
GE                   : 36
GT                   : 35
IDENTIFIER           : 15 24 25 45
IF                   : 16
INTEGER              : 42
LBRACE               : 16 17 19 21
LE                   : 34
LPAREN               : 16 17 21 22 23 41
LT                   : 33
MINUS                : 27 40
NE                   : 32
NOT                  : 39
OR                   : 38
PLUS                 : 26
POWER                : 30
PRINT                : 22
RBRACE               : 16 17 19 21
READ                 : 23
RPAREN               : 16 17 21 22 23 41
SEMICOLON            : 15 22 23
STRING_LITERAL       : 44
TIMES                : 28
TRUE                 : 46
TYPE_BOOL            : 13
TYPE_CHAR            : 12
TYPE_FLOAT           : 10
TYPE_INT             : 9
TYPE_STRING          : 11
WHILE                : 21
error                : 

Nonterminals, with rules where they appear

assignment_or_declaration : 4
conditional_statement : 5
elif_list            : 16 17
else_optional        : 16
empty                : 14 18 20
expression           : 15 16 17 21 22 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 41
identifier_list      : 23 24
optional_type        : 15
print_statement      : 7
program              : 0
read_statement       : 8
repetition_statement : 6
statement            : 2 3
statement_list       : 1 2 16 17 19 21

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement_list statement
    (3) statement_list -> . statement
    (4) statement -> . assignment_or_declaration
    (5) statement -> . conditional_statement
    (6) statement -> . repetition_statement
    (7) statement -> . print_statement
    (8) statement -> . read_statement
    (15) assignment_or_declaration -> . optional_type IDENTIFIER ASSIGN expression SEMICOLON
    (16) conditional_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_list else_optional
    (21) repetition_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (22) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (23) read_statement -> . READ LPAREN identifier_list RPAREN SEMICOLON
    (9) optional_type -> . TYPE_INT
    (10) optional_type -> . TYPE_FLOAT
    (11) optional_type -> . TYPE_STRING
    (12) optional_type -> . TYPE_CHAR
    (13) optional_type -> . TYPE_BOOL
    (14) optional_type -> . empty
    (48) empty -> .

    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12
    READ            shift and go to state 13
    TYPE_INT        shift and go to state 14
    TYPE_FLOAT      shift and go to state 15
    TYPE_STRING     shift and go to state 16
    TYPE_CHAR       shift and go to state 17
    TYPE_BOOL       shift and go to state 18
    IDENTIFIER      reduce using rule 48 (empty -> .)

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    assignment_or_declaration      shift and go to state 4
    conditional_statement          shift and go to state 5
    repetition_statement           shift and go to state 6
    print_statement                shift and go to state 7
    read_statement                 shift and go to state 8
    optional_type                  shift and go to state 9
    empty                          shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (2) statement_list -> statement_list . statement
    (4) statement -> . assignment_or_declaration
    (5) statement -> . conditional_statement
    (6) statement -> . repetition_statement
    (7) statement -> . print_statement
    (8) statement -> . read_statement
    (15) assignment_or_declaration -> . optional_type IDENTIFIER ASSIGN expression SEMICOLON
    (16) conditional_statement -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE elif_list else_optional
    (21) repetition_statement -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (22) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (23) read_statement -> . READ LPAREN identifier_list RPAREN SEMICOLON
    (9) optional_type -> . TYPE_INT
    (10) optional_type -> . TYPE_FLOAT
    (11) optional_type -> . TYPE_STRING
    (12) optional_type -> . TYPE_CHAR
    (13) optional_type -> . TYPE_BOOL
    (14) optional_type -> . empty
    (48) empty -> .

    $end            reduce using rule 1 (program -> statement_list .)
    IF              shift and go to state 10
    WHILE           shift and go to state 11
    PRINT           shift and go to state 12
    READ            shift and go to state 13
    TYPE_INT        shift and go to state 14
    TYPE_FLOAT      shift and go to state 15
    TYPE_STRING     shift and go to state 16
    TYPE_CHAR       shift and go to state 17
    TYPE_BOOL       shift and go to state 18
    IDENTIFIER      reduce using rule 48 (empty -> .)

    statement                      shift and go to state 20
    assignment_or_declaration      shift and go to state 4
    conditional_statement          shift and go to state 5
    repetition_statement           shift and go to state 6
    print_statement                shift and go to state 7
    read_statement                 shift and go to state 8
    optional_type                  shift and go to state 9
    empty                          shift and go to state 19

state 3

    (3) statement_list -> statement .

    IF              reduce using rule 3 (statement_list -> statement .)
    WHILE           reduce using rule 3 (statement_list -> statement .)
    PRINT           reduce using rule 3 (statement_list -> statement .)
    READ            reduce using rule 3 (statement_list -> statement .)
    TYPE_INT        reduce using rule 3 (statement_list -> statement .)
    TYPE_FLOAT      reduce using rule 3 (statement_list -> statement .)
    TYPE_STRING     reduce using rule 3 (statement_list -> statement .)
    TYPE_CHAR       reduce using rule 3 (statement_list -> statement .)
    TYPE_BOOL       reduce using rule 3 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement .)


state 4

    (4) statement -> assignment_or_declaration .

    IF              reduce using rule 4 (statement -> assignment_or_declaration .)
    WHILE           reduce using rule 4 (statement -> assignment_or_declaration .)
    PRINT           reduce using rule 4 (statement -> assignment_or_declaration .)
    READ            reduce using rule 4 (statement -> assignment_or_declaration .)
    TYPE_INT        reduce using rule 4 (statement -> assignment_or_declaration .)
    TYPE_FLOAT      reduce using rule 4 (statement -> assignment_or_declaration .)
    TYPE_STRING     reduce using rule 4 (statement -> assignment_or_declaration .)
    TYPE_CHAR       reduce using rule 4 (statement -> assignment_or_declaration .)
    TYPE_BOOL       reduce using rule 4 (statement -> assignment_or_declaration .)
    IDENTIFIER      reduce using rule 4 (statement -> assignment_or_declaration .)
    $end            reduce using rule 4 (statement -> assignment_or_declaration .)
    RBRACE          reduce using rule 4 (statement -> assignment_or_declaration .)


state 5

    (5) statement -> conditional_statement .

    IF              reduce using rule 5 (statement -> conditional_statement .)
    WHILE           reduce using rule 5 (statement -> conditional_statement .)
    PRINT           reduce using rule 5 (statement -> conditional_statement .)
    READ            reduce using rule 5 (statement -> conditional_statement .)
    TYPE_INT        reduce using rule 5 (statement -> conditional_statement .)
    TYPE_FLOAT      reduce using rule 5 (statement -> conditional_statement .)
    TYPE_STRING     reduce using rule 5 (statement -> conditional_statement .)
    TYPE_CHAR       reduce using rule 5 (statement -> conditional_statement .)
    TYPE_BOOL       reduce using rule 5 (statement -> conditional_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> conditional_statement .)
    $end            reduce using rule 5 (statement -> conditional_statement .)
    RBRACE          reduce using rule 5 (statement -> conditional_statement .)


state 6

    (6) statement -> repetition_statement .

    IF              reduce using rule 6 (statement -> repetition_statement .)
    WHILE           reduce using rule 6 (statement -> repetition_statement .)
    PRINT           reduce using rule 6 (statement -> repetition_statement .)
    READ            reduce using rule 6 (statement -> repetition_statement .)
    TYPE_INT        reduce using rule 6 (statement -> repetition_statement .)
    TYPE_FLOAT      reduce using rule 6 (statement -> repetition_statement .)
    TYPE_STRING     reduce using rule 6 (statement -> repetition_statement .)
    TYPE_CHAR       reduce using rule 6 (statement -> repetition_statement .)
    TYPE_BOOL       reduce using rule 6 (statement -> repetition_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> repetition_statement .)
    $end            reduce using rule 6 (statement -> repetition_statement .)
    RBRACE          reduce using rule 6 (statement -> repetition_statement .)


state 7

    (7) statement -> print_statement .

    IF              reduce using rule 7 (statement -> print_statement .)
    WHILE           reduce using rule 7 (statement -> print_statement .)
    PRINT           reduce using rule 7 (statement -> print_statement .)
    READ            reduce using rule 7 (statement -> print_statement .)
    TYPE_INT        reduce using rule 7 (statement -> print_statement .)
    TYPE_FLOAT      reduce using rule 7 (statement -> print_statement .)
    TYPE_STRING     reduce using rule 7 (statement -> print_statement .)
    TYPE_CHAR       reduce using rule 7 (statement -> print_statement .)
    TYPE_BOOL       reduce using rule 7 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> print_statement .)
    $end            reduce using rule 7 (statement -> print_statement .)
    RBRACE          reduce using rule 7 (statement -> print_statement .)


state 8

    (8) statement -> read_statement .

    IF              reduce using rule 8 (statement -> read_statement .)
    WHILE           reduce using rule 8 (statement -> read_statement .)
    PRINT           reduce using rule 8 (statement -> read_statement .)
    READ            reduce using rule 8 (statement -> read_statement .)
    TYPE_INT        reduce using rule 8 (statement -> read_statement .)
    TYPE_FLOAT      reduce using rule 8 (statement -> read_statement .)
    TYPE_STRING     reduce using rule 8 (statement -> read_statement .)
    TYPE_CHAR       reduce using rule 8 (statement -> read_statement .)
    TYPE_BOOL       reduce using rule 8 (statement -> read_statement .)
    IDENTIFIER      reduce using rule 8 (statement -> read_statement .)
    $end            reduce using rule 8 (statement -> read_statement .)
    RBRACE          reduce using rule 8 (statement -> read_statement .)


state 9

    (15) assignment_or_declaration -> optional_type . IDENTIFIER ASSIGN expression SEMICOLON

    IDENTIFIER      shift and go to state 21


state 10

    (16) conditional_statement -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE elif_list else_optional

    LPAREN          shift and go to state 22


state 11

    (21) repetition_statement -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 23


state 12

    (22) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 24


state 13

    (23) read_statement -> READ . LPAREN identifier_list RPAREN SEMICOLON

    LPAREN          shift and go to state 25


state 14

    (9) optional_type -> TYPE_INT .

    IDENTIFIER      reduce using rule 9 (optional_type -> TYPE_INT .)


state 15

    (10) optional_type -> TYPE_FLOAT .

    IDENTIFIER      reduce using rule 10 (optional_type -> TYPE_FLOAT .)


state 16

    (11) optional_type -> TYPE_STRING .

    IDENTIFIER      reduce using rule 11 (optional_type -> TYPE_STRING .)


state 17

    (12) optional_type -> TYPE_CHAR .

    IDENTIFIER      reduce using rule 12 (optional_type -> TYPE_CHAR .)


state 18

    (13) optional_type -> TYPE_BOOL .

    IDENTIFIER      reduce using rule 13 (optional_type -> TYPE_BOOL .)


state 19

    (14) optional_type -> empty .

    IDENTIFIER      reduce using rule 14 (optional_type -> empty .)


state 20

    (2) statement_list -> statement_list statement .

    IF              reduce using rule 2 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 2 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 2 (statement_list -> statement_list statement .)
    READ            reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE_INT        reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE_FLOAT      reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE_STRING     reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE_CHAR       reduce using rule 2 (statement_list -> statement_list statement .)
    TYPE_BOOL       reduce using rule 2 (statement_list -> statement_list statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement_list statement .)
    $end            reduce using rule 2 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement_list statement .)


state 21

    (15) assignment_or_declaration -> optional_type IDENTIFIER . ASSIGN expression SEMICOLON

    ASSIGN          shift and go to state 26


state 22

    (16) conditional_statement -> IF LPAREN . expression RPAREN LBRACE statement_list RBRACE elif_list else_optional
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 28

state 23

    (21) repetition_statement -> WHILE LPAREN . expression RPAREN LBRACE statement_list RBRACE
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 37

state 24

    (22) print_statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 38

state 25

    (23) read_statement -> READ LPAREN . identifier_list RPAREN SEMICOLON
    (24) identifier_list -> . identifier_list COMMA IDENTIFIER
    (25) identifier_list -> . IDENTIFIER

    IDENTIFIER      shift and go to state 40

    identifier_list                shift and go to state 39

state 26

    (15) assignment_or_declaration -> optional_type IDENTIFIER ASSIGN . expression SEMICOLON
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 41

state 27

    (41) expression -> LPAREN . expression RPAREN
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 42

state 28

    (16) conditional_statement -> IF LPAREN expression . RPAREN LBRACE statement_list RBRACE elif_list else_optional
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression
    (30) expression -> expression . POWER expression
    (31) expression -> expression . EQ expression
    (32) expression -> expression . NE expression
    (33) expression -> expression . LT expression
    (34) expression -> expression . LE expression
    (35) expression -> expression . GT expression
    (36) expression -> expression . GE expression
    (37) expression -> expression . AND expression
    (38) expression -> expression . OR expression

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    POWER           shift and go to state 48
    EQ              shift and go to state 49
    NE              shift and go to state 50
    LT              shift and go to state 51
    LE              shift and go to state 52
    GT              shift and go to state 53
    GE              shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56


state 29

    (40) expression -> MINUS . expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 57

state 30

    (39) expression -> NOT . expression
    (26) expression -> . expression PLUS expression
    (27) expression -> . expression MINUS expression
    (28) expression -> . expression TIMES expression
    (29) expression -> . expression DIVIDE expression
    (30) expression -> . expression POWER expression
    (31) expression -> . expression EQ expression
    (32) expression -> . expression NE expression
    (33) expression -> . expression LT expression
    (34) expression -> . expression LE expression
    (35) expression -> . expression GT expression
    (36) expression -> . expression GE expression
    (37) expression -> . expression AND expression
    (38) expression -> . expression OR expression
    (39) expression -> . NOT expression
    (40) expression -> . MINUS expression
    (41) expression -> . LPAREN expression RPAREN
    (42) expression -> . INTEGER
    (43) expression -> . FLOAT_NUM
    (44) expression -> . STRING_LITERAL
    (45) expression -> . IDENTIFIER
    (46) expression -> . TRUE
    (47) expression -> . FALSE

    NOT             shift and go to state 30
    MINUS           shift and go to state 29
    LPAREN          shift and go to state 27
    INTEGER         shift and go to state 31
    FLOAT_NUM       shift and go to state 32
    STRING_LITERAL  shift and go to state 33
    IDENTIFIER      shift and go to state 34
    TRUE            shift and go to state 35
    FALSE           shift and go to state 36

    expression                     shift and go to state 58

state 31

    (42) expression -> INTEGER .

    RPAREN          reduce using rule 42 (expression -> INTEGER .)
    PLUS            reduce using rule 42 (expression -> INTEGER .)
    MINUS           reduce using rule 42 (expression -> INTEGER .)
    TIMES           reduce using rule 42 (expression -> INTEGER .)
    DIVIDE          reduce using rule 42 (expression -> INTEGER .)
    POWER           reduce using rule 42 (expression -> INTEGER .)
    EQ              reduce using rule 42 (expression -> INTEGER .)
    NE              reduce using rule 42 (expression -> INTEGER .)
    LT              reduce using rule 42 (expression -> INTEGER .)
    LE              reduce using rule 42 (expression -> INTEGER .)
    GT              reduce using rule 42 (expression -> INTEGER .)
    GE              reduce using rule 42 (expression -> INTEGER .)
    AND             reduce using rule 42 (expression -> INTEGER .)
    OR              reduce using rule 42 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 42 (expression -> INTEGER .)


state 32

    (43) expression -> FLOAT_NUM .

    RPAREN          reduce using rule 43 (expression -> FLOAT_NUM .)
    PLUS            reduce using rule 43 (expression -> FLOAT_NUM .)
    MINUS           reduce using rule 43 (expression -> FLOAT_NUM .)
    TIMES           reduce using rule 43 (expression -> FLOAT_NUM .)
    DIVIDE          reduce using rule 43 (expression -> FLOAT_NUM .)
    POWER           reduce using rule 43 (expression -> FLOAT_NUM .)
    EQ              reduce using rule 43 (expression -> FLOAT_NUM .)
    NE              reduce using rule 43 (expression -> FLOAT_NUM .)
    LT              reduce using rule 43 (expression -> FLOAT_NUM .)
    LE              reduce using rule 43 (expression -> FLOAT_NUM .)
    GT              reduce using rule 43 (expression -> FLOAT_NUM .)
    GE              reduce using rule 43 (expression -> FLOAT_NUM .)
    AND             reduce using rule 43 (expression -> FLOAT_NUM .)
    OR              reduce using rule 43 (expression -> FLOAT_NUM .)
    SEMICOLON       reduce using rule 43 (expression -> FLOAT_NUM .)


state 33

    (44) expression -> STRING_LITERAL .

    RPAREN          reduce using rule 44 (expression -> STRING_LITERAL .)
    PLUS            reduce using rule 44 (expression -> STRING_LITERAL .)
    MINUS           reduce using rule 44 (expression -> STRING_LITERAL .)
    TIMES           reduce using rule 44 (expression -> STRING_LITERAL .)
    DIVIDE          reduce using rule 44 (expression -> STRING_LITERAL .)
    POWER           reduce using rule 44 (expression -> STRING_LITERAL .)
    EQ              reduce using rule 44 (expression -> STRING_LITERAL .)
    NE              reduce using rule 44 (expression -> STRING_LITERAL .)
    LT              reduce using rule 44 (expression -> STRING_LITERAL .)
    LE              reduce using rule 44 (expression -> STRING_LITERAL .)
    GT              reduce using rule 44 (expression -> STRING_LITERAL .)
    GE              reduce using rule 44 (expression -> STRING_LITERAL .)
    AND             reduce using rule 44 (expression -> STRING_LITERAL .)
    OR              reduce using rule 44 (expression -> STRING_LITERAL .)
    SEMICOLON       reduce using rule 44 (expression -> STRING_LITERAL .)


state 34

    (45) expression -> IDENTIFIER .

    RPAREN          reduce using rule 45 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 45 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 45 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 45 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 45 (expression -> IDENTIFIER .)
    POWER           reduce using rule 45 (expression -> IDENTIFIER .)
    EQ              reduce using rule 45 (expression -> IDENTIFIER .)
    NE              reduce using rule 45 (expression -> IDENTIFIER .)
    LT              reduce using rule 45 (expression -> IDENTIFIER .)
    LE              reduce using rule 45 (expression -> IDENTIFIER .)
    GT              reduce using rule 45 (expression -> IDENTIFIER .)
    GE              reduce using rule 45 (expression -> IDENTIFIER .)
    AND             reduce using rule 45 (expression -> IDENTIFIER .)
    OR              reduce using rule 45 (expression -> IDENTIFIER .)
    SEMICOLON       reduce using rule 45 (expression -> IDENTIFIER .)


state 35

    (46) expression -> TRUE .

    RPAREN          reduce using rule 46 (expression -> TRUE .)
    PLUS            reduce using rule 46 (expression -> TRUE .)
    MINUS           reduce using rule 46 (expression -> TRUE .)
    TIMES           reduce using rule 46 (expression -> TRUE .)
    DIVIDE          reduce using rule 46 (expression -> TRUE .)
    POWER           reduce using rule 46 (expression -> TRUE .)
    EQ              reduce using rule 46 (expression -> TRUE .)
    NE              reduce using rule 46 (expression -> TRUE .)
    LT              reduce using rule 46 (expression -> TRUE .)
    LE              reduce using rule 46 (expression -> TRUE .)
    GT              reduce using rule 46 (expression -> TRUE .)
    GE              reduce using rule 46 (expression -> TRUE .)
    AND             reduce using rule 46 (expression -> TRUE .)
    OR              reduce using rule 46 (expression -> TRUE .)
    SEMICOLON       reduce using rule 46 (expression -> TRUE .)


state 36

    (47) expression -> FALSE .

    RPAREN          reduce using rule 47 (expression -> FALSE .)
    PLUS            reduce using rule 47 (expression -> FALSE .)
    MINUS           reduce using rule 47 (expression -> FALSE .)
    TIMES           reduce using rule 47 (expression -> FALSE .)
    DIVIDE          reduce using rule 47 (expression -> FALSE .)
    POWER           reduce using rule 47 (expression -> FALSE .)
    EQ              reduce using rule 47 (expression -> FALSE .)
    NE              reduce using rule 47 (expression -> FALSE .)
    LT              reduce using rule 47 (expression -> FALSE .)
    LE              reduce using rule 47 (expression -> FALSE .)
    GT              reduce using rule 47 (expression -> FALSE .)
    GE              reduce using rule 47 (expression -> FALSE .)
    AND             reduce using rule 47 (expression -> FALSE .)
    OR              reduce using rule 47 (expression -> FALSE .)
    SEMICOLON       reduce using rule 47 (expression -> FALSE .)


state 37

    (21) repetition_statement -> WHILE LPAREN expression . RPAREN LBRACE statement_list RBRACE
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression
    (30) expression -> expression . POWER expression
    (31) expression -> expression . EQ expression
    (32) expression -> expression . NE expression
    (33) expression -> expression . LT expression
    (34) expression -> expression . LE expression
    (35) expression -> expression . GT expression
    (36) expression -> expression . GE expression
    (37) expression -> expression . AND expression
    (38) expression -> expression . OR expression

    RPAREN          shift and go to state 59
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    POWER           shift and go to state 48
    EQ              shift and go to state 49
    NE              shift and go to state 50
    LT              shift and go to state 51
    LE              shift and go to state 52
    GT              shift and go to state 53
    GE              shift and go to state 54
    AND             shift and go to state 55
    OR              shift and go to state 56


state 38

    (22) print_statement -> PRINT LPAREN expression . RPAREN SEMICOLON
    (26) expression -> expression . PLUS expression
    (27) expression -> expression . MINUS expression
    (28) expression -> expression . TIMES expression
    (29) expression -> expression . DIVIDE expression
    (30) expression -> expression . POWER expression
    (31) expression -> expression . EQ expression
    (32) expression -> expression . NE expression
    (33) expression -> expression . LT expression
    (34) expression -> expression . LE expression
    (35) expression -> expression . GT expression
    (36) expression -> expression . GE expression
    (37) expression -> expression . AND expression
    (38) expression -> expression . OR expression
